Now requires amsmath

--- a/doc/dfcgen.sty
+++ b/doc/dfcgen.sty
@@ -1,6 +1,6 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{dfcgen}
-\RequirePackage{amsopn}
+\RequirePackage{amsmath}
 
 %% Jacobian elliptic functions
 
