--- a/README
+++ b/README
@@ -18,17 +18,17 @@ What is dfcgen-gtk?
       Comb filter etc.
 
     * Predefined systems with determined coefficients (and degree) as fitting
-      filters, Differentiators
+      filters, differentiators
 
     * Frequency transformation into high-pass, band-pass and band-stop
 
     * Edit of coefficients (change, delete, round)
 
-    * Pole/Zero Analysis
+    * Pole/Zero analysis
 
     * Graphical visualisation of system characteristics (plots) as magnitude
-      response, phase response, attenuation, discrimination, group delay, phase
-      delay, impulse response, step response
+      response, phase response, attenuation, characteristic function, group delay,
+      phase delay, impulse response and step response
 
     * In plots: zoom, lin./log. and auto-scaling
 
