abbreviation DFCGEN changed to DFCGen

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 What is dfcgen-gtk?
 
-    DFCGEN, the Digital Filter Coefficients Generator, is a FREEWARE
+    DFCGen, the Digital Filter Coefficients Generator, is a FREEWARE
     tool/program, which may assist you in the design of digital filters. It
     supports the engineer in analysis and synthesis of linear time-invariant
     time-discrete (LTI) systems from the theoretical point of view. It
