Added sinus cardinalis to dfcgen.sty

--- a/doc/dfcgen.sty
+++ b/doc/dfcgen.sty
@@ -25,7 +25,8 @@
 \DeclareMathOperator{\artanh}{artanh}
 
 \DeclareMathOperator{\chebyT}{T}     % Chebyshev function of first kind
-\DeclareMathOperator{\Si}{Si}        % Sine integral
+\DeclareMathOperator{\si}{si}        % Sinus Cardinalis
+\DeclareMathOperator{\Si}{Si}        % Sine Integral
 
 \DeclareMathOperator{\imop}{Im}      % Imaginary part of complex number (Im{} operator)
 \DeclareMathOperator{\reop}{Re}      % real part of complex number (Re{} operator)
