--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-Copyright (C) 2006-2020 Ralf Hoppe <ralf.hoppe@dfcgen.de>
+Copyright (C) 2006-2021 Ralf Hoppe <ralf.hoppe@dfcgen.de>
 
 
-This directory tree holds the version 0.5 source code of DFCGen GTK+,
-the Digital Filter Coefficients Generator for GTK+.
+This directory tree holds the version 0.6 source code of DFCGen GTK+,
+the Digital Filter Coefficients Generator for GTK+ 3.
 
 
 Features
