--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Copyright (C) 2006-2021 Ralf Hoppe <ralf.hoppe@dfcgen.de>
+Copyright (C) 2006-2022 Ralf Hoppe <ralf.hoppe@dfcgen.de>
 
 
-This directory tree holds the version 0.6 source code of DFCGen GTK+,
+This directory tree holds the source code of DFCGen GTK+,
 the Digital Filter Coefficients Generator for GTK+ 3.
 
 
